--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ form span
 
 div.copy
 {
-	position: absolute;
+	position: fixed;
     left: 0;
     right: 0;
     bottom: 1;
@@ -77,5 +77,7 @@ div.copy
 
 canvas {
 	position: absolute;
+	min-width: 100%;
+	min-height: 100vh;
 	/*display:none;*/
 }
