--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,10 @@ div.copy
 
 canvas {
 	position: absolute;
-	min-width: 100%;
-	min-height: 100vh;
+	max-width: 100%;
+	max-height: 100%;
+	left:50%;
+	top:50%;
+	transform: translate(-50%, -50%);
 	/*display:none;*/
 }
